bk_ida/gccida/g0/purge_addressof_1
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_addressof_1/src/function.c:3499:68: error: unknown type name 'hash_table_0'; did you mean 'hash_table'?
bool  purge_addressof_1( rtx *loc, rtx insn, int force, int store, hash_table_0 *ht) 
                                                                   ^~~~~~~~~~~~
                                                                   hash_table
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_addressof_1/src/hashtable.h:40:19: note: 'hash_table' declared here
typedef struct ht hash_table;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_addressof_1/src/function.c:3499:7: error: conflicting types for 'purge_addressof_1'
bool  purge_addressof_1( rtx *loc, rtx insn, int force, int store, hash_table_0 *ht) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_addressof_1/src/function.c:293:13: note: previous declaration is here
static bool purge_addressof_1 PARAMS ((rtx *, rtx, int, int,
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_addressof_1/src/function.c:3507:4: error: expected ';' after expression
rtx v12; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_addressof_1/src/function.c:3507:5: error: use of undeclared identifier 'v12'
rtx v12; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_addressof_1/src/function.c:3511:4: error: expected ';' after expression
rtx p; // [rsp+30h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_addressof_1/src/function.c:3511:5: error: use of undeclared identifier 'p'
rtx p; // [rsp+30h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_addressof_1/src/function.c:3512:4: error: expected ';' after expression
rtx pa; // [rsp+30h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_addressof_1/src/function.c:3512:5: error: use of undeclared identifier 'pa'
rtx pa; // [rsp+30h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_addressof_1/src/function.c:3516:4: error: expected ';' after expression
rtx p_0; // [rsp+40h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_addressof_1/src/function.c:3516:5: error: use of undeclared identifier 'p_0'
rtx p_0; // [rsp+40h] [rbp-60h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_addressof_1/src/function.c:3518:4: error: expected ';' after expression
rtx sub_0; // [rsp+50h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_addressof_1/src/function.c:3518:5: error: use of undeclared identifier 'sub_0'
rtx sub_0; // [rsp+50h] [rbp-50h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_addressof_1/src/function.c:3519:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+5Ch] [rbp-44h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_addressof_1/src/function.c:3520:4: error: expected ';' after expression
rtx x; // [rsp+60h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_addressof_1/src/function.c:3520:5: error: use of undeclared identifier 'x'
rtx x; // [rsp+60h] [rbp-40h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_addressof_1/src/function.c:3521:4: error: expected ';' after expression
rtx tem_0; // [rsp+68h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_addressof_1/src/function.c:3521:5: error: use of undeclared identifier 'tem_0'
rtx tem_0; // [rsp+68h] [rbp-38h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_addressof_1/src/function.c:3523:4: error: expected ';' after expression
rtx z; // [rsp+78h] [rbp-28h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_addressof_1/src/function.c:3523:5: error: use of undeclared identifier 'z'
rtx z; // [rsp+78h] [rbp-28h] 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/purge_addressof_1/src/obj/function.o] Error 1
